[package]
name = "tml-switchboard"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Utility
uuid = { version = "1.9.1", features = ["serde", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
# because cookie-rs has an unavoidable hard dependency on time::Duration
time = "0.3.36"

# Database
# TODO: Switch back to semver upon first version bump AFTER 0.7.4.
#       Temporarily using git, b/c we need the bugfix in commit 1ce0e760deb8ad70ed17931a9981377ae42855fe.
#sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "1ce0e760deb8ad70ed17931a9981377ae42855fe", features = ["uuid", "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "ipnetwork"] }
sqlx = { version = "0.8.0", features = ["uuid", "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "ipnetwork"] }

# Server
axum = { version = "0.7.5", features = ["tokio", "http2", "json", "tracing", "ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-signed", "typed-header"] }
headers = "0.4.0"
http = "1.1.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower = { version = "0.4.13", features = ["default"] }
tower-http = { version = "0.5.2", features = ["trace", "sensitive-headers"] }

# Tokio
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
futures-util = { version = "0.3.30", features = ["sink"] }

# Lock-free hashmap
dashmap = "6.0.1"

# Used for CSRF comparison
subtle = "2.6.1"
# Used for password verification
argon2 = { version = "0.6.0-pre.0", features = [] }
# CSPRNG
rand_chacha = { version = "0.9.0-alpha.1" }
rand = { version = "0.9.0-alpha.1", features = ["getrandom"] }
# asymmetric digital signatures with ecdsa; used for supervisor authentication
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "serde"] }

# Logging facilities
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Command line arguments
clap = { version = "4.5.8", features = ["derive", "error-context", "env"] }

# General serialization
serde = "1.0.203"
serde_json = "1.0.120"
serde_with = { version = "3.8.3", features = ["base64"] }
# Configuration deserialization
toml = "0.8.14"
humantime-serde = "1.1.1"

# Error derives
thiserror = "1.0.61"
# TODO: Phase out
miette = { version = "7.2.0", features = ["fancy"] }
base64 = "0.21.7"

treadmill-rs = { path = "../../treadmill-rs" }
parking_lot = "0.12.3"