[package]
name = "treadmill-tcp-control-socket-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../../treadmill-rs" }

anyhow = "1.0.76"
bytes = "1.5.0"
futures = { version = "0.3.30", default-features = false }
log = "0.4.20"
serde_json = "1.0.108"
tokio = { version = "1.35.1", default-features = false, features = ["rt", "sync", "net", "macros", "fs"] }
tokio-stream = { version = "0.1.14" }
tokio-util = { version = "0.7.10", default-features = false, features = ["codec"] }