[package]
name = "treadmill-tcp-control-socket-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "net", "macros", "fs"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

[lints]
workspace = true
