[package]
name = "tml-tcp-control-socket-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../../treadmill-rs" }

serde_json = "1.0.108"
tokio = { version = "1.35.1", default-features = false, features = ["sync", "rt", "macros", "net"] }
anyhow = "1.0.76"
log = "0.4.20"
uuid = "1.6.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
futures = { version = "0.3.30", default-features = false }
bytes = "1.5.0"
