[package]
name = "tml-unix-seqpacket-control-socket-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../../treadmill-rs" }

anyhow = "1.0.76"
log = "0.4.20"
serde_json = "1.0.108"
tokio = { version = "1.35.1", default-features = false, features = ["rt", "sync", "macros"] }
tokio-seqpacket = "0.7.1"