[package]
name = "tml-unix-seqpacket-control-socket-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../../treadmill-rs" }

serde_json = "1.0.108"
tokio-seqpacket = "0.7.1"
tokio = { version = "1.35.1", default-features = false, features = ["sync", "rt", "macros"] }
anyhow = "1.0.76"
log = "0.4.20"
uuid = "1.6.1"
